Added "Sticky" thread feature

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       10);
+		          10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       0);
+		          0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       25);
+		          25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,27 +1720,27 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                          
+	filter: progid :                                             
 		                           
-		DXImageTransform.Microsoft.AlphaImageLoader (   
+		   DXImageTransform.Microsoft.AlphaImageLoader (      
 		 
 		   
 		      
 		             
 		 
 		    
-		                                 src =
+		                                    src =   
 		                                 
 		
 		                      
-		            '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =      
+		               '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =         
 		 
 		   
 		                
 		 
 		   
-		                                   'scale' );
+		                                      'scale' );
 }
 
 .yui-picker-mask {
@@ -1915,9 +1915,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       25);
+		          25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2022,9 +2022,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       12);
+		          12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2129,9 +2129,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       12);
+		          12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2193,9 +2193,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       0);
+		          0);
 }
 
 .yui-dt-resizerproxy {
@@ -2204,9 +2204,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       0);
+		          0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2302,9 +2302,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       25);
+		          25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2691,17 +2691,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2799,9 +2799,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-editor-container iframe {
@@ -3902,9 +3902,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4671,9 +4671,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       12);
+		          12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5184,16 +5184,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       0);
+		          0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5281,9 +5281,9 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =    
+	filter: alpha(opacity =       
 		                                                         
-		        100);
+		           100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5539,17 +5539,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5647,9 +5647,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =     
+	filter: alpha(opacity =        
 		                                                         
-		       50);
+		          50);
 }
 
 .yui-editor-container iframe {
@@ -7324,20 +7324,15 @@ a.ygtvspacer {
 		no-repeat;
 }
 
-
-
 /*
 OUR OWN CSS BEGINS
 */
-
 /*
 AUI Loading mask styles
 */
-
 .yui3-helper-hidden,.yui3-overlaymask-hidden {
 	display: none;
 }
-
 
 .yui3-state-default,.yui3-state-active,.yui3-state-hover,.yui3-calendar-content,.yui3-colorpicker-content,.yui3-colorpicker-panel-content,.yui3-image-gallery-paginator .yui3-image-gallery-paginator-thumb,.yui3-image-viewer-loading .yui3-image-viewer-bd,.yui3-loadingmask-message,.yui3-loadingmask-message-content,.yui3-progress-bar-content,.yui3-progress-bar-status
 	{
@@ -7713,13 +7708,13 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                
-		          DXImageTransform.Microsoft.gradient (            
-		                   startColorstr =                  "#0000FF",
-		endColorstr =  
+	filter: progid :                                   
+		             DXImageTransform.Microsoft.gradient (               
+		                      startColorstr =                        "#0000FF",
+		endColorstr =     
 		 
 		      
-		      "#19558D" );
+		         "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8287,10 +8282,12 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                 DXImageTransform.Microsoft.gradient (  
+	filter: progid :                      
+		DXImageTransform.Microsoft.gradient (  
+		  
 		       
-		      startColorstr =        
-		        "#A7BBCC", endColorstr =                 "#879BAD" );
+		         startColorstr =           
+		           "#A7BBCC", endColorstr =                       "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9387,4 +9384,29 @@ div.avtr_bg {
 
 div.imgloader {
 	background: none !important;
+}
+
+/*
+
+.sprite {
+	margin-top: 0;
+	vertical-align: middle;
+	display: inline-block;
+	background-repeat: no-repeat;
+	background: url(/images/icon_sprite.png) no-repeat 0 0;
+	height: 16px;
+	overflow: hidden;
+	text-indent: -99999em;
+	width: 16px;
+}*/
+a.pri1:before {
+	content: url('/images/pin.png');
+	
+*/}
+
+a.pri1:after {
+	content: " [important]"
+}
+a.closed:after {
+	content: " [closed]"
 }
