Intermediate commit just to backup changes. This commit is untested and may be unstable. For stable version use previous commit or wait for next one.

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          10);
+		                    10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          0);
+		                    0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          25);
+		                    25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,27 +1720,29 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                             
+	filter: progid :                                                       
 		                           
-		   DXImageTransform.Microsoft.AlphaImageLoader (      
+		             DXImageTransform.Microsoft.AlphaImageLoader ( 
+		              
 		 
 		   
 		      
 		             
 		 
 		    
-		                                    src =   
+		                                              src =             
 		                                 
 		
 		                      
-		               '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =         
+		                      
+		  '../../build/colorpicker/assets/picker_mask.png', sizingMethod =  
+		                
 		 
 		   
 		                
 		 
 		   
-		                                      'scale' );
+		                                                'scale' );
 }
 
 .yui-picker-mask {
@@ -1915,9 +1917,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          25);
+		                    25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2022,9 +2024,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          12);
+		                    12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2129,9 +2131,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          12);
+		                    12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2193,9 +2195,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          0);
+		                    0);
 }
 
 .yui-dt-resizerproxy {
@@ -2204,9 +2206,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          0);
+		                    0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2302,9 +2304,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          25);
+		                    25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2691,17 +2693,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2799,9 +2801,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-editor-container iframe {
@@ -3902,9 +3904,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4671,9 +4673,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          12);
+		                    12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5184,16 +5186,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          0);
+		                    0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5281,9 +5283,9 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =       
+	filter: alpha(opacity =                 
 		                                                         
-		           100);
+		                     100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5539,17 +5541,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5647,9 +5649,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =        
+	filter: alpha(opacity =                  
 		                                                         
-		          50);
+		                    50);
 }
 
 .yui-editor-container iframe {
@@ -7364,11 +7366,6 @@ h2 {
 	font-weight: bold;
 }
 
-.fr {
-	position: relative;
-	float: right;
-}
-
 #layout1 div#qview-main {
 	width: 100%;
 }
@@ -7708,13 +7705,15 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                   
-		             DXImageTransform.Microsoft.gradient (               
-		                      startColorstr =                        "#0000FF",
-		endColorstr =     
+	filter: progid :                                             
+		                       DXImageTransform.Microsoft.gradient (       
+		                 
+		                                startColorstr =     
+		                            
+		         "#0000FF", endColorstr =               
 		 
 		      
-		         "#19558D" );
+		                   "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8282,12 +8281,14 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                      
-		DXImageTransform.Microsoft.gradient (  
+	filter: progid :                                
+		          DXImageTransform.Microsoft.gradient (            
 		  
 		       
-		         startColorstr =           
-		           "#A7BBCC", endColorstr =                       "#879BAD" );
+		                   startColorstr =                     
+		                     "#A7BBCC", endColorstr =    
+		                             
+		        "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8408,6 +8409,10 @@ div.t2 {
 
 .controls {
 	margin-top: 6px;
+	color: #888;
+}
+
+.lighttext {
 	color: #888;
 }
 
@@ -8597,12 +8602,13 @@ input.submit,button,input[type="submit"],input[type="button"],input[type="file"]
 	vertical-align: top;
 }
 
-button:active,button.btn:active,input[type=submit]:active,.btn:active {
+/*button:active,button.btn:active,input[type=submit]:active,.btn:active {
 	background-image: none !important;
 	text-shadow: none !important;
 	outline: none !important;
 }
 
+*/
 #form_error ul,.form_error ul {
 	padding: 6px;
 }
@@ -8894,7 +8900,6 @@ td.td_question {
 .fr {
 	position: relative;
 	float: right;
-	clear: both;
 }
 
 .a2 {
@@ -8985,7 +8990,6 @@ div.vote { /*position: relative;
 div.acceptit {
 	clear: both;
 	margin-top: 10px;
-	height: 30px;
 }
 
 div.anstype1 {
@@ -9401,12 +9405,79 @@ div.imgloader {
 }*/
 a.pri1:before {
 	content: url('/images/pin.png');
-	
-*/}
+	*/
+}
 
 a.pri1:after {
 	content: " [important]"
 }
+
 a.closed:after {
 	content: " [closed]"
+}
+
+.btn_comment,.btn_comment:active {
+	margin-left: 1em;
+	background: url('/images/bg.png');
+	border-color: #304369 !important;
+	background-position: 0 -1400px;
+	color: white !important;
+	font-size: 1em !important;
+	border-top-left-radius: 3px 3px;
+	border-top-right-radius: 3px 3px;
+	border-bottom-right-radius: 3px 3px;
+	border-bottom-left-radius: 3px 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	font-weight: bold;
+}
+
+a.com_link {
+	float: left;
+	clear: both;
+	padding: 3px;
+	text-decoration: none;
+	color: #888;
+	text-decoration: none;
+}
+
+a.com_link:hover {
+	background-color: #888;
+	color: #FFF;
+}
+
+div.com_wrap {
+	width: 100% !important;
+	border-bottom: 1px dotted #999 !important;
+	padding-bottom: 6px !important;
+}
+
+td.comments {
+	border-top: 1px dashed #666;
+}
+
+div.com_1,div.com_i {
+	width: 100% !important;
+	color: #444;
+}
+
+div.com_like {
+	min-width: 60px !important;
+	width: 60px;
+}
+
+div.com_auth {
+	margin-right: 6px;
+}
+
+div.com_tools {
+	padding-left: 60px !important;
+}
+
+div.com_b {
+	white-space: pre-wrap !important;
+}
+
+table.tbl_comment td {
+	padding: 0 !important;
 }
