--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 10);
+		                                    10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 0);
+		                                    0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 25);
+		                                    25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,11 +1720,11 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :           
+	filter: progid :              
 		                                                        
 		                           
-		                          DXImageTransform.Microsoft.AlphaImageLoader
-		( 
+		                           
+		 DXImageTransform.Microsoft.AlphaImageLoader (    
 		 
 		   
 		      
@@ -1735,15 +1735,16 @@ p#clear {
 		             
 		 
 		    
-		                                                           src = 
+		                                                              src =
+		   
 		       
 		                
 		                                 
 		
 		                      
 		                      
-		               '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =         
+		                  '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =            
 		 
 		   
 		                
@@ -1752,7 +1753,8 @@ p#clear {
 		                
 		 
 		   
-		                                                             'scale' );
+		                                                               
+		'scale' );
 }
 
 .yui-picker-mask {
@@ -1927,9 +1929,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 25);
+		                                    25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2034,9 +2036,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 12);
+		                                    12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2141,9 +2143,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 12);
+		                                    12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2205,9 +2207,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 0);
+		                                    0);
 }
 
 .yui-dt-resizerproxy {
@@ -2216,9 +2218,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 0);
+		                                    0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2314,9 +2316,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 25);
+		                                    25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2703,17 +2705,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2811,9 +2813,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-editor-container iframe {
@@ -3914,9 +3916,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4683,9 +4685,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 12);
+		                                    12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5196,16 +5198,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 0);
+		                                    0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5293,9 +5295,9 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                              
+	filter: alpha(opacity =                                 
 		                                                         
-		                                  100);
+		                                     100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5551,17 +5553,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5659,9 +5661,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                               
+	filter: alpha(opacity =                                  
 		                                                         
-		                                 50);
+		                                    50);
 }
 
 .yui-editor-container iframe {
@@ -7715,23 +7717,23 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid : 
+	filter: progid :    
 		                                                        
 		                                   
-		DXImageTransform.Microsoft.gradient (   
+		   DXImageTransform.Microsoft.gradient (      
 		
 		 
 		    
 		        
 		                 
-		                                             startColorstr =   
+		                                                startColorstr =      
 		              
 		                            
-		                      "#0000FF", endColorstr = 
+		                         "#0000FF", endColorstr =    
 		                          
 		 
 		      
-		                                "#19558D" );
+		                                   "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8299,17 +8301,18 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                             
-		                       DXImageTransform.Microsoft.gradient (       
+	filter: progid :                                                
+		                          DXImageTransform.Microsoft.gradient ( 
+		        
 		                 
 		  
 		       
-		                                startColorstr =     
+		                                   startColorstr =        
 		                            
-		                                  "#A7BBCC", endColorstr =  
+		                                     "#A7BBCC", endColorstr =     
 		              
 		                             
-		                     "#879BAD" );
+		                        "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8498,51 +8501,15 @@ div.com_flag {
 	background-position: -128px -144px;
 }
 
-/*
-
-
-.controls span.edit:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	
-	background-position: -64px -112px;
+.controls span.edited {
+	background-position: -96px -176px;
+	float: left !important;
 }
 
-.controls span.unstick:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -128px -144px;
+a.c_editor:hover {
+	border-bottom: none !important;
 }
 
-
-.controls span.stick:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -144px -144px;
-}
-
-.controls span.del:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -32px -192px;
-}
-
-
-.controls span.close:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -192px -96px;
-}
-
-
-.controls span.flag:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -16px -112px;
-}
-
-
-.controls span.retag:hover {
-	background: url("/images/icon_sprite.png") no-repeat scroll 0 0;
-	background-position: -240px -96px;
-}
-
-
-*/
 span.comment {
 	background-position: -128px -96px;
 }
@@ -8876,13 +8843,7 @@ div.yui-toolbar-titlebar h2 a {
 	font-family: arial;
 }
 
-/*.answersdiv {
-	position: relative;
-	float: left;
-	margin-top: 10px;
-}
 
-*/
 table.ans_table {
 	position: relative;
 	float: left;
@@ -9075,9 +9036,7 @@ td.td_question {
 	background-position: 0px -38px;
 }
 
-div.vote { /*position: relative;
-	float: left;
-	*/
+div.vote { 
 	margin: 10px;
 	background-image: url( '/images/rating_thumbs.png' );
 	background-repeat: repeat-y;
@@ -9603,6 +9562,10 @@ div.com_tools {
 	padding-left: 60px !important;
 }
 
+div.com_tools span {
+	float: right;
+}
+
 div.com_b {
 	white-space: pre-wrap !important;
 }
@@ -9613,9 +9576,12 @@ table.tbl_comment td {
 
 a.commentor,a.commentor1 {
 	font-size: 90% !important;
-	border-bottom: none;
 	text-decoration: none !important;
 	white-space: nowrap;
+}
+
+a.commentor {
+	border-bottom: 1px #19558D dotted !important;
 }
 
 textarea.com_bo {
@@ -9623,7 +9589,7 @@ textarea.com_bo {
 }
 
 a.commentor:hover,a.commentor1:hover {
-	border-bottom: 1px #19558D dotted !important;
+	border-bottom: none !important;
 }
 
 a.commentor1 {
@@ -9658,7 +9624,7 @@ div.com_like a,a.c_like {
 .c_likes {
 	margin: 2px;
 	height: 18px;
-	min-height: 18px; 
+	min-height: 18px;
 	font-weight: bold;
 	padding-right: 5px;
 	color: #999;
